# hickory-proto-wasm

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs  serde_glue.rs  utils.rs
