[package]
name = "hickory-proto-wasm"
version = "0.1.0"
authors = ["Angelos Bouklis <53124886+ArjixWasTaken@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde-wasm-bindgen = "0.6"
serde = { version = "*", features = ["derive"] }
gloo-utils = { version = "0.1", features = ["serde"] }

tinyvec = { version = "*", features = ["serde"] }

hickory-proto = { version = "0.24.1", default-features = false, features = [
    "wasm-bindgen",
    "text-parsing",
    "serde-config",
] }

getrandom = { version = "*", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
